tests/outref/TERR027.ref

-- TERR027 : OCTO345 : Issue error for extrinsic functions with '%' in invalid places

CREATE FUNCTION BADFUNC() RETURNS INTEGER AS $$BAD%FUNC;
CREATE FUNCTION BADFUNC() RETURNS INTEGER AS $$BAD^FU%NC;

[ERROR]: ERR_PERCENT_IN_EXTRINSIC_FUNCTION_NAME: '%' is only allowed at the beginning of an M label or routine name.
LINE 3:1: CREATE FUNCTION BADFUNC() RETURNS INTEGER AS $$BAD%FUNC;
                                                       ^^^^^^^^^^
OCTO> CREATE FUNCTION BADFUNC() RETURNS INTEGER AS $$BAD%FUNC;
LINE 4:1: CREATE FUNCTION BADFUNC() RETURNS INTEGER AS $$BAD^FU%NC;
                                                               ^
syntax error, unexpected PERCENT, expecting SEMICOLON or ENDOFFILE
OCTO> CREATE FUNCTION BADFUNC() RETURNS INTEGER AS $$BAD^FU%NC;
OCTO> 
